--- a/book.bib
+++ b/book.bib
@@ -863,7 +863,7 @@ year = {2022}
 }
 
 @Article{Chen2016,
-  author =	 {Yunshun Chen and Aaron A T Lun and Gordon K Smyth},
+  author =	 {Chen, Yunshun and Lun, Aaron TL and Smyth, Gordon K},
   title =	 {From reads to genes to pathways: differential
                   expression analysis of RNA-Seq experiments using
                   Rsubread and the edgeR quasi-likelihood pipeline},
@@ -1241,3 +1241,159 @@ https://github.com/thomasp85/patchwork},
   langid = {english},
   file = {/Users/henrikeckermann/Zotero/storage/6A7ZLDAB/Zhou et al. - 2022 - LinDA linear models for differential abundance an.pdf;/Users/henrikeckermann/Zotero/storage/ZF97UC86/s13059-022-02655-5.pdf}
 }
+
+
+@Article{Yang2022,
+  title = {A comprehensive evaluation of microbial differential abundance analysis methods: current status and potential solutions},
+  shorttitle = {{{ZicoSeq}}},
+  author = {Yang, Lu and Chen, Jun},
+  year =	 {2022},
+  month = aug,
+  journal = {Microbiome},
+  volume = {10},
+  number = {130},
+  pages = {2049--2618},
+  doi = {10.1186/s40168-022-01320-0},
+  langid = {english}
+}
+
+
+@Article{fastANCOM2022,
+  title = {fastANCOM: a fast method for analysis of compositions of microbiomes},
+  shorttitle = {{{fastANCOM}}},
+  author = {Zhou, Chao and Wang, Huimin and Zhao,Hongyu and Wang, Tao},
+  year =	 {2022},
+  month = mar,
+  journal = {Bioinformatics},
+  volume = {38},
+  pages = {2039--2041},
+  issn = {7},
+  langid = {english}
+}
+
+
+@Article{Hu2020,
+  title = {Testing hypotheses about the microbiome using the linear decomposition model (LDM)},
+  shorttitle = {{{LDM}}},
+  author = {Hu, Yijuan and Satten, Glen A},
+  year =	 {2020},
+  month = jul,
+  journal = {Bioinformatics},
+  volume = {36},
+  pages = {4106–-4115},
+  issn = {14},
+  langid = {english}
+}
+
+
+@Article{Zhu2021,
+  title = {Constraining PERMANOVA and LDM to within-set comparisons by projection improves the efficiency of analyses of matched sets of microbiome data},
+  shorttitle = {{{LDM}}},
+  author = {Zhu, Zhengyi and Satten, Glen A and Mitchell, Caroline and Hu, Yijuan},
+  year =	 {2021},
+  month = jul,
+  journal = {Microbiome},
+  volume = {9},
+  number = {133},
+  doi = {10.1186/s40168-021-01034-9},
+  langid = {english}
+}
+
+@Article{Sohn2015,
+  title = {A robust approach for identifying differentially abundant features in metagenomic samples},
+  shorttitle = {{{RAIDA}}},
+  author = {Sohn, Michael B. and Du, Ruofei and An, Lingling},
+  year =	 {2015},
+  month = jul,
+  journal = {Bioinformatics},
+  volume = {31},
+  page ={2269–2275},
+  doi = {10.1093/bioinformatics/btv165},
+  langid = {english}
+}
+
+
+@Article{Brill2019,
+  title = {Testing for Differential Abundance in Compositional Counts Data, with Application to Microbiome Studies},
+  shorttitle = {{{DACOMP}}},
+  author = {Brill, Barak and Amnon, Amir and Ruth, Heller},
+  year =	 {2022},
+  month = dec,
+  journal = {The Annals of Applied Statistics},
+  volume = {16},
+  page ={2648-2671},
+  langid = {english}
+}
+
+
+@Article{Omnibus2018,
+  title = {An omnibus test for differential distribution analysis of microbiome sequencing data},
+  shorttitle = {{{Omnibus}}},
+  author = {Chen, Jun and King, Emily and Deek, Rebecca and Wei, Zhi and Yu, Yue and Grill, Diane and Ballman, Karla},
+  year = {2018},
+  month = feb,
+  journal = {Bioinformatics},
+  volume = {34},
+  issue = {4},
+  page ={643-651},
+  langid = {english}
+}
+
+
+@Article{Liu2020,
+  title = {An empirical Bayes approach to normalization and differential abundance testing for microbiome data},
+  shorttitle = {{{eBay}}},
+  author = {Liu, Tiantian and Zhao, Hongyu and Wang, Tao},
+  year = {2020},
+  month = jun,
+  journal = {BMC Bioinformatics},
+  volume = {21},
+  issue = {1},
+  page ={225},
+  langid = {english}
+}
+
+
+@Article{Ling2021,
+  title = {Powerful and robust non-parametric association testing for microbiome data via a zero-inflated quantile approach (ZINQ)},
+  shorttitle = {{{ZINQ}}},
+  author = {Ling, Wodan and Ni, Zhao and Anna, M. Plantinga and Lenore, J. Launer and Anthony, A. Fodor and Katie, A. Meyer and Michael, C. Wu},
+  year = {2021},
+  month = sep,
+  journal = {Microbiome},
+  volume = {181},
+  page ={1-19},
+  langid = {english}
+}
+
+
+@Article{Kumar2018,
+  title = {Analysis and correction of compositional bias in sparse sequencing count data},
+  shorttitle = {{{Wrench}}},
+  author = {Kumar, M. Senthil and Slud, V. Eric and Okrah, Kwame and Hicks, C. Stephanie and Hannenhalli, Sridhar and Bravo, Corrada Héctor},
+  year = {2018},
+  month = nov,
+  journal = {BMC genomics},
+  volume = {19},
+  issue = {1},
+  page ={1-23},
+  langid = {english}
+}
+
+
+
+
+@Article{ZIBB2018,
+  title = {A Zero-inflated Beta-binomial Model for Microbiome Data Analysis},
+  shorttitle = {{{ZIBB}}},
+  author = {Hu, Tao and Gallins, Paul and Zhou, Yi‐Hui},
+  year = {2018},
+  month = jul,
+  journal = {Stat},
+  volume = {7},
+  issue = {1},
+  doi = {10.1002/sta4.185},
+  langid = {english}
+}
+
+
