argument name changed

--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -183,8 +183,8 @@ For a complete list of available transformations and parameters, see function
 
 ```{r}
 assay(tse, "pseudo") <- assay(tse, "counts") + 1
-tse <- transformCounts(tse, assay_name = "pseudo", method = "relabundance")
-tse <- transformCounts(x = tse, assay_name = "relabundance", method = "clr", 
+tse <- transformCounts(tse, assay.type = "pseudo", method = "relabundance")
+tse <- transformCounts(x = tse, assay.type = "relabundance", method = "clr", 
                         pseudocount = 1, name = "clr_transformation")
 
 head(assay(tse, "clr_transformation"))
@@ -213,7 +213,7 @@ in one sample.
 ```{r}
 taxa.abund.cc1 <- getAbundanceSample(tse, 
                                      sample_id = "CC1",
-                                     assay_name = "counts")
+                                     assay.type = "counts")
 taxa.abund.cc1[1:10]
 ```
 
@@ -222,7 +222,7 @@ taxa.abund.cc1[1:10]
 ```{r}
 taxa.abundances <- getAbundanceFeature(tse, 
                                       feature_id = "Phylum:Bacteroidetes",
-                                      assay_name = "counts")
+                                      assay.type = "counts")
 taxa.abundances[1:10]
 ```
 
