--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -45,9 +45,9 @@ tse <- hitchip1006
 tse <- transformCounts(tse, MARGIN = "samples", method = "relabundance")
 
 # Use argument names
-# assay_name / assay_name / assay_name
+# assay.type / assay.type / assay.type
 # depending on the mia package version
-plotAbundanceDensity(tse, layout = "jitter", assay_name = "relabundance",
+plotAbundanceDensity(tse, layout = "jitter", assay.type = "relabundance",
                      n = 40, point_size=1, point_shape=19, point_alpha=0.1) + 
                      scale_x_log10(label=scales::percent)
 ```
@@ -57,7 +57,7 @@ visualized as a density plot over a log scaled axis, with
 "nationality" indicated by colors:
 
 ```{r, warning=FALSE, message=FALSE}
-plotAbundanceDensity(tse, layout = "density", assay_name = "relabundance",
+plotAbundanceDensity(tse, layout = "density", assay.type = "relabundance",
                      n = 5, colour_by="nationality", point_alpha=1/10) +
     scale_x_log10()
 ```
@@ -89,7 +89,7 @@ threshold (`as_relative = FALSE`) at read count 1 (`detection = 1`) is
 accessed.
 
 ```{r concepts_prevalence2}
-head(getPrevalence(tse, detection = 1, sort = TRUE, assay_name = "counts",
+head(getPrevalence(tse, detection = 1, sort = TRUE, assay.type = "counts",
                    as_relative = FALSE))
 ```
 
@@ -111,7 +111,7 @@ applied on the resulting object.
 altExp(tse,"Phylum") <- agglomerateByRank(tse, "Phylum")
 # Check prevalence for the Phylum abundance table from the altExp slot
 head(getPrevalence(altExp(tse,"Phylum"), detection = 1/100, sort = TRUE,
-                   assay_name = "counts", as_relative = TRUE))
+                   assay.type = "counts", as_relative = TRUE))
 ```
 
 
@@ -120,7 +120,7 @@ agglomeration on the fly.
 
 ```{r}
 head(getPrevalence(tse, rank = "Phylum", detection = 1/100, sort = TRUE,
-                   assay_name = "counts", as_relative = TRUE))
+                   assay.type = "counts", as_relative = TRUE))
 ```
 
 Note that, by default, `na.rm = TRUE` is used for agglomeration in
@@ -163,7 +163,7 @@ are stored in the `altExp` slot.
 ```{r}
 rowData(altExp(tse,"Phylum"))$prevalence <- 
     getPrevalence(altExp(tse,"Phylum"), detection = 1/100, sort = FALSE,
-                  assay_name = "counts", as_relative = TRUE)
+                  assay.type = "counts", as_relative = TRUE)
 ```
 
 The prevalences can then be plotted using the plotting functions from
@@ -184,17 +184,17 @@ altExps(tse) <-
           function(y){
               rowData(y)$prevalence <- 
                   getPrevalence(y, detection = 1/100, sort = FALSE,
-                                assay_name = "counts", as_relative = TRUE)
+                                assay.type = "counts", as_relative = TRUE)
               y
           })
 top_phyla <- getTopTaxa(altExp(tse,"Phylum"),
                         method="prevalence",
                         top=5L,
-                        assay_name="counts")
+                        assay.type="counts")
 top_phyla_mean <- getTopTaxa(altExp(tse,"Phylum"),
                              method="mean",
                              top=5L,
-                             assay_name="counts")
+                             assay.type="counts")
 x <- unsplitByRanks(tse, ranks = taxonomyRanks(tse)[1:6])
 x <- addTaxonomyTree(x)
 ```
