--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -28,7 +28,7 @@ tse <- relAbundanceCounts(tse)
 
 # Getting top taxa on a Phylum level
 tse_phylum <- agglomerateByRank(tse, rank ="Phylum", onRankOnly=TRUE)
-top_taxa <- getTopTaxa(tse_phylum,top = 5, assay_name = "relabundance")
+top_taxa <- getTopTaxa(tse_phylum,top = 5, assay.type = "relabundance")
 
 # Renaming the "Phylum" rank to keep only top taxa and the rest to "Other"
 phylum_renamed <- lapply(rowData(tse)$Phylum,
@@ -36,7 +36,7 @@ phylum_renamed <- lapply(rowData(tse)$Phylum,
 rowData(tse)$Phylum <- as.character(phylum_renamed)
 
 # Visualizing the composition barplot, with samples order by "Bacteroidetes"
-plotAbundance(tse, assay_name="relabundance", rank = "Phylum",
+plotAbundance(tse, assay.type="relabundance", rank = "Phylum",
               order_rank_by="abund", 
               order_sample_by = "Bacteroidetes")
 ```
@@ -60,15 +60,15 @@ library(ggplot2)
 
 # Add clr-transformation on samples
 assay(tse_phylum, "pseudo") <- assay(tse_phylum, "counts") + 1
-tse_phylum <- transformCounts(tse_phylum, assay_name = "pseudo",
+tse_phylum <- transformCounts(tse_phylum, assay.type = "pseudo",
                               method = "relabundance")
 
 tse_phylum <- transformCounts(tse_phylum,
-                  assay_name = "relabundance",
+                  assay.type = "relabundance",
 		  method = "clr")
 
 # Add z-transformation on features (taxa)
-tse_phylum <- transformCounts(tse_phylum, assay_name = "clr", 
+tse_phylum <- transformCounts(tse_phylum, assay.type = "clr", 
                               MARGIN = "features",
                               method = "z", name = "clr_z")
 ```
@@ -77,7 +77,7 @@ Visualize as heatmap.
 
 ```{r heatmapvisu}
 # Melt the assay for plotting purposes
-df <- meltAssay(tse_phylum, assay_name = "clr_z")
+df <- meltAssay(tse_phylum, assay.type = "clr_z")
 
 # Determines the scaling of colours
 maxval <- round(max(abs(df$clr_z)))
@@ -110,7 +110,7 @@ tse_phylum_subset <- transformCounts(tse_phylum_subset,
                          method = "clr",
     			 pseudocount = 1)
 
-tse_phylum_subset <- transformCounts(tse_phylum_subset, assay_name = "clr",
+tse_phylum_subset <- transformCounts(tse_phylum_subset, assay.type = "clr",
                                      MARGIN = "features", 
                                      method = "z", name = "clr_z")
 
