--- a/22_communitytyping.Rmd
+++ b/22_communitytyping.Rmd
@@ -121,8 +121,8 @@ Computing the euclidean PCoA and storing it as a data frame
 ```{r}
 # Does clr transformation. Pseudocount is added, because data contains zeros.
 assay(tse, "pseudo") <- assay(tse, "counts") + 1
-tse <- transformCounts(tse, assay_name = "pseudo", method = "relabundance")
-tse <- transformCounts(tse, assay_name = "relabundance", method = "clr")
+tse <- transformCounts(tse, assay.type = "pseudo", method = "relabundance")
+tse <- transformCounts(tse, assay.type = "relabundance", method = "clr")
 
 library(scater)
 # Calculate PCoA
