--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -121,8 +121,8 @@ rownames(mae[[1]]) <- getTaxonomyLabels(mae[[1]])
 correlations <- testExperimentCrossCorrelation(mae, 
                                                experiment1 = 1,
                                                experiment2 = 2,
-                                               assay_name1 = "log10", 
-                                               assay_name2 = "nmr",
+                                               assay.type1 = "log10", 
+                                               assay.type2 = "nmr",
                                                method = "spearman", 
                                                p_adj_threshold = NULL,
                                                cor_threshold = NULL,
@@ -204,15 +204,15 @@ mae[[1]] <- mae[[1]][!duplicated(rownames(assay(mae[[1]]))), ]
 
 # Transforming microbiome data with rclr
 mae[[1]] <- transformCounts(mae[[1]], method = "relabundance")
-mae[[1]] <- transformCounts(mae[[1]], assay_name = "relabundance", method = "rclr")
+mae[[1]] <- transformCounts(mae[[1]], assay.type = "relabundance", method = "rclr")
 
 # Transforming metabolomic data with log10
-mae[[2]] <- transformCounts(mae[[2]], assay_name = "nmr",
+mae[[2]] <- transformCounts(mae[[2]], assay.type = "nmr",
                             MARGIN = "samples",
                             method = "log10")
 
 # Transforming biomarker data with z-transform
-mae[[3]] <- transformCounts(mae[[3]], assay_name = "signals",
+mae[[3]] <- transformCounts(mae[[3]], assay.type = "signals",
                             MARGIN = "features",
                             method = "z", pseudocount = 1)
 
