--- a/40_machine_learning.Rmd
+++ b/40_machine_learning.Rmd
@@ -39,7 +39,7 @@ Let's first preprocess the data.
 tse <- agglomerateByRank(tse, rank = "order")
 
 # Apply CLR transform
-tse <- transformCounts(tse, assay_name = "counts", method = "clr",
+tse <- transformCounts(tse, assay.type = "counts", method = "clr",
                        MARGIN="samples", pseudocount=1)
 
 # Get assay
