--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -281,7 +281,7 @@ enterotype <- transformCounts(enterotype, method = "relabundance")
 formula <- as.formula(paste0("assay ~ ", str_c(variable_names, collapse = " + ")) )
 
 # # Perform RDA
-rda <- calculateRDA(enterotype, assay_name = "relabundance",
+rda <- calculateRDA(enterotype, assay.type = "relabundance",
                     formula = formula, distance = "bray", na.action = na.exclude)
 # Get the rda object
 rda <- attr(rda, "rda")
@@ -424,9 +424,9 @@ Let us agglomerate the data at a Genus level and getting the dominant taxa per s
 # Agglomerate to genus level
 tse_Genus <- agglomerateByRank(tse, rank="Genus")
 # Convert to relative abundances
-tse_Genus <- transformCounts(tse, method = "relabundance", assay_name="counts")
+tse_Genus <- transformCounts(tse, method = "relabundance", assay.type="counts")
 # Add info on dominant genus per sample
-tse_Genus <- addPerSampleDominantTaxa(tse_Genus, assay_name="relabundance", name = "dominant_taxa")
+tse_Genus <- addPerSampleDominantTaxa(tse_Genus, assay.type="relabundance", name = "dominant_taxa")
 ```
 
 
@@ -441,7 +441,7 @@ Getting top taxa and visualizing the abundance on PCoA.
 
 ```{r}
 # Getting the top taxa
-top_taxa <- getTopTaxa(tse_Genus,top = 6, assay_name = "relabundance")
+top_taxa <- getTopTaxa(tse_Genus,top = 6, assay.type = "relabundance")
 
 # Naming all the rest of non top-taxa as "Other"
 most_abundant <- lapply(colData(tse_Genus)$dominant_taxa,
