--- a/add-comm-typing.Rmd
+++ b/add-comm-typing.Rmd
@@ -22,7 +22,7 @@ tse <- tse[, colData(tse)$Country == "Finland"]
 # Agglomerate to phylum level
 tse <- agglomerateByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
 # Get top taxa
-rel_taxa <- getTopTaxa(tse, top = 8, assay_name = "counts")
+rel_taxa <- getTopTaxa(tse, top = 8, assay.type = "counts")
 # Take only the top taxa
 tse <- tse[is.element(rownames(tse), rel_taxa), ]
 
@@ -46,9 +46,9 @@ tse <- agglomerateByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
 tse <- tse[is.element(rownames(tse), rel_taxa),]
 
 # CLR and Z transforms
-tse <- transformCounts(tse, MARGIN = "samples", assay_name = "counts",
+tse <- transformCounts(tse, MARGIN = "samples", assay.type = "counts",
                        method = "clr", pseudocount=1)
-tse <- transformCounts(tse, MARGIN = "features", assay_name = "clr", method = "z")
+tse <- transformCounts(tse, MARGIN = "features", assay.type = "clr", method = "z")
 
 Countries <- data.frame("Country" = colData(tse)$Country)
 rownames(Countries) <- colData(tse)$Sample_ID
@@ -218,9 +218,9 @@ Looking at heatmaps of the CSTs can reveal structure on a different level. Using
 
 ```{r message = FALSE, warning = FALSE, results = FALSE}
 # Z transform of CLR counts
-tse2 <- transformCounts(tse2, MARGIN = "samples", assay_name = "counts",
+tse2 <- transformCounts(tse2, MARGIN = "samples", assay.type = "counts",
                         method = "clr", pseudocount=1)
-tse2 <- transformCounts(tse2, MARGIN = "features", assay_name = "clr", method = "z")
+tse2 <- transformCounts(tse2, MARGIN = "features", assay.type = "clr", method = "z")
 # get top taxa
 tse2 <- tse2[is.element(rownames(tse2), rel_taxa), ]
 
@@ -380,10 +380,10 @@ Visualise dmm clusters in a heatmap.
 ```{r}
 # get clr + z-transformed counts
 tse_dmn <- transformCounts(tse_dmn, MARGIN = "samples",
-                           assay_name = "counts", method = "clr",
+                           assay.type = "counts", method = "clr",
 			   pseudocount = 1)
 tse_dmn <- transformCounts(tse_dmn, MARGIN = "features",
-                           assay_name = "clr", method = "z")
+                           assay.type = "clr", method = "z")
 # objects containing dmm component information
 clust <- factor(vec)
 names(clust) <- colnames(tse_dmn)
