installation scripts updated

--- a/40_machine_learning.Rmd
+++ b/40_machine_learning.Rmd
@@ -62,13 +62,10 @@ In the example below, we use [mikropml](https://journals.asm.org/doi/10.1128/mBi
 package. We try to predict the diet type based on the data.
 
 ```{r super3}
-if( !require("mikropml") ){
-    install.packages("mikropml")
-    library(mikropml)
-}
+library(mikropml)
 
 # Run random forest 
-results <- run_ml(df, "rf", outcome_colname = 'diet', 
+results <- run_ml(df, "rf", outcome_colname = "diet", 
                   kfold = 2, cv_times = 5, training_frac = 0.8)
 
 # Print result
@@ -118,10 +115,8 @@ Let's create ROC curve which is a commonly used method in binary classification.
 For unbalanced data, you might want to plot precision-recall curve. 
 
 ```{r super5}
-if( !require(MLeval) ){
-    install.packages("MLeval")
-    library(MLeval)
-}
+library(MLeval)
+
 # Calculate different evaluation metrics
 res <- evalm(model, showplots = FALSE)
 
