--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -28,29 +28,61 @@ has also been criticized recently [@Quinn2021].
 
 ### Examples and tools
 
-Due to the complex data characteristics of microbiome sequencing data, differential abundance analysis of microbiome data faces many statistical challenges [@Yang2022], including:
+Due to the complex data characteristics of microbiome sequencing data,
+differential abundance analysis of microbiome data faces many
+statistical challenges [@Yang2022], including:
   
-- Highly variable. The abundance of a specific taxon could range over several orders of magnitude. 
+- Highly variable. The abundance of a specific taxon could range over
+  several orders of magnitude.
   
-- Zero-inflated. In a typical microbiome dataset, more than 70% of the values are zeros. Zeros could be due to either physical absence (structural zeros) or insufficient sampling effort (sampling zeros).
+- Zero-inflated. In a typical microbiome dataset, more than 70% of the
+  values are zeros. Zeros could be due to either physical absence
+  (structural zeros) or insufficient sampling effort (sampling zeros).
   
-- Compositional. Increase or decrease in the (absolute) abundance of one taxon at the sampling site will lead to apparent changes in the relative abundances of other taxa in the sample. 
+- Compositional. Increase or decrease in the (absolute) abundance of
+  one taxon at the sampling site will lead to apparent changes in the
+  relative abundances of other taxa in the sample.
 
-As summarized in @Yang2022, to address the above statistical chanllenegs:
+As summarized in @Yang2022, to address the above statistical
+chanllenegs:
 
-- Over-dispersed count models has been proposed to address zero inflation, such as the negative binomial model used by edgeR [@Chen2016] and DESeq2 [@Love2014], the beta-binomial model used by corncorb [@Martin2021]. 
+- Over-dispersed count models has been proposed to address zero
+  inflation, such as the negative binomial model used by edgeR
+  [@Chen2016] and DESeq2 [@Love2014], the beta-binomial model used by
+  corncorb [@Martin2021].
 
-- Zero-inflated mixture models has aslo been proposed to address zero inflation, such as zero-inflated log-normal/normal mixture model used by metagenomeSeq [@Paulson2017] and RAIDA [@Sohn2015], zero-inflated beta-binomial model used by ZIBB [@ZIBB2018], and zero-inflated negative binomial model used by Omnibus [@Omnibus2018]. 
+- Zero-inflated mixture models has aslo been proposed to address zero
+  inflation, such as zero-inflated log-normal/normal mixture model
+  used by metagenomeSeq [@Paulson2017] and RAIDA [@Sohn2015],
+  zero-inflated beta-binomial model used by ZIBB [@ZIBB2018], and
+  zero-inflated negative binomial model used by Omnibus
+  [@Omnibus2018].
 
-- Bayesian methods have been used to impute the zeros for methods working on proportion data, accounting for sampling variability and sequencing depth variation. Examples include ALDEx2 [@Gloor2016] and eBay [@Liu2020]. 
+- Bayesian methods have been used to impute the zeros for methods
+  working on proportion data, accounting for sampling variability and
+  sequencing depth variation. Examples include ALDEx2 [@Gloor2016] and
+  eBay [@Liu2020].
 
-- Other methods use the pseudo-count approach to impute the zeros, such as MaAsLin2 [@Mallick2020] and ANCOMBC [@ancombc2020].
+- Other methods use the pseudo-count approach to impute the zeros,
+  such as MaAsLin2 [@Mallick2020] and ANCOMBC [@ancombc2020].
 
-- Different strategies have been used to address compositional effects, including:
+- Different strategies have been used to address compositional
+  effects, including:
 
-  - Robust normalization. For example, trimmed mean of M-values (TMM) normalization used by edgeR, relative log expression (RLE) normalization used by DESeq2 [@Love2014], cumulative sum scaling (CSS) normalization used by metagenomeSeq, centered log-ratio transformation (CLR) normalization used by ALDEx2 [@Gloor2016] and geometric mean of pairwise ratios (GMPR) normalization used by Omnibus [@Omnibus2018]. Wrench normalization [@Kumar2018] corrects the compositional bias by an empirical Bayes approach, which has been recommended in metagenomeSeq [@Paulson2017] tutorial.
-  - Reference taxa approach used by DACOMP [@Brill2019] and RAIDA [@Sohn2015]. 
+  - Robust normalization. For example, trimmed mean of M-values (TMM)
+    normalization used by edgeR, relative log expression (RLE)
+    normalization used by DESeq2 [@Love2014], cumulative sum scaling
+    (CSS) normalization used by metagenomeSeq, centered log-ratio
+    transformation (CLR) normalization used by ALDEx2 [@Gloor2016] and
+    geometric mean of pairwise ratios (GMPR) normalization used by
+    Omnibus [@Omnibus2018]. Wrench normalization [@Kumar2018] corrects
+    the compositional bias by an empirical Bayes approach, which has
+    been recommended in metagenomeSeq [@Paulson2017] tutorial.
+  
+  - Reference taxa approach used by DACOMP [@Brill2019] and RAIDA [@Sohn2015].
+  
   - Analyzing the pattern of pairwise log ratios, such as ANCOM [@Mandal2015].
+  
   - Bias-correction used by ANCOMBC [@ancombc2020].
 
 The most popular tools, without going into evaluating whether or not they perform well for this task, are:  
@@ -78,22 +110,36 @@ The most popular tools, without going into evaluating whether or not they perfor
 - [Wilcoxon test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/wilcox.test)  
 
 
-We recommend to have a look at @Nearing2022
-who compared all these listed methods across 38
-different datasets. Because different methods use different approaches
-(parametric vs non-parametric, different normalization techiniques, assumptions
-etc.), results can differ between methods. 
-Unfortunately, as @Nearing2022 point out, they can differ substantially. Also, more recently @Yang2022 comprehensively evaluated these methods via a Semi-parametric framework and 106 real datasets. @Yang2022 also pointed out, different DAA tools could sometimes produce quite discordant results, opening to the possibility of cherry-picking the tool in favor of one’s own hypothesis. Therefore, it is highly recommended to pick several methods to get an idea about how robust and potentially reproducible your findings are depending on the method. In this section we demonstrate 4 methods that can be recommended based on recent literature (ANCOM-BC [@ancombc2020], ALDEx2 [@Gloor2016], Maaslin2 [@Mallick2020], LinDA [@Zhou2022] and ZicoSeq [@Yang2022]) and we will compare the results between them.
+We recommend to have a look at @Nearing2022 who compared all these
+listed methods across 38 different datasets. Because different methods
+use different approaches (parametric vs non-parametric, different
+normalization techiniques, assumptions etc.), results can differ
+between methods.  Unfortunately, as @Nearing2022 point out, they can
+differ substantially. Also, more recently @Yang2022 comprehensively
+evaluated these methods via a Semi-parametric framework and 106 real
+datasets. @Yang2022 also pointed out, different DAA tools could
+sometimes produce quite discordant results, opening to the possibility
+of cherry-picking the tool in favor of one’s own
+hypothesis. Therefore, it is highly recommended to pick several
+methods to get an idea about how robust and potentially reproducible
+your findings are depending on the method. In this section we
+demonstrate 4 methods that can be recommended based on recent
+literature (ANCOM-BC [@ancombc2020], ALDEx2 [@Gloor2016], Maaslin2
+[@Mallick2020], LinDA [@Zhou2022] and ZicoSeq [@Yang2022]) and we will
+compare the results between them.
 
-Note that the purpose of this section is to show how to perform DAA in R, not
-how to correctly do causal inference. Depending on your experimental setup
-and your theory, you must determine how to specify any model exactly. 
-E.g., there might be confounding factors that might drive (the absence of)
-differences between the shown groups that we ignore here for simplicity. Or your dataset is repeated sampling design, matched-pair design or the general longitudianl design.
-However, we will show how you could include covariates in those models.
-Furthermore, we picked a dataset that merely has microbial abundances in a TSE
-object as well as a grouping variable in the sample data. We simplify the
-analysis by only including 2 of the 3 groups. 
+Note that the purpose of this section is to show how to perform DAA in
+R, not how to correctly do causal inference. Depending on your
+experimental setup and your theory, you must determine how to specify
+any model exactly.  E.g., there might be confounding factors that
+might drive (the absence of) differences between the shown groups that
+we ignore here for simplicity. Or your dataset is repeated sampling
+design, matched-pair design or the general longitudianl design.
+However, we will show how you could include covariates in those
+models.  Furthermore, we picked a dataset that merely has microbial
+abundances in a TSE object as well as a grouping variable in the
+sample data. We simplify the analysis by only including 2 of the 3
+groups.
 
 
 ```{r load-pkg-data}
@@ -102,21 +148,11 @@ library(patchwork)
 library(tidySummarizedExperiment)
 library(knitr)
 library(tidyverse)
-library(phyloseq)
 library(ALDEx2)
 library(Maaslin2)
 library(MicrobiomeStat)
-
-if(!require(ANCOMBC)){
-  BiocManager::install("ANCOMBC")
-  library(ANCOMBC)
-
-}
-if(!require(GUniFrac)){
-  install.packages("GUniFrac")
-  library(GUniFrac)
-}
-
+library(ANCOMBC)
+library(GUniFrac)
 
 # set random seed because some tools can randomly vary and then produce 
 # different results:
@@ -125,27 +161,35 @@ set.seed(13253)
 # we use a demo dataset and restrict it to two geo locations
 # for easy illustration
 data(peerj13075)
-tse <- peerj13075
-tse <- tse[ ,tse$Geographical_location %in% c("Pune", "Nashik")]
+tse0 <- peerj13075
+tse0 <- tse0[ ,tse0$Geographical_location %in% c("Pune", "Nashik")]
 # Let us make this a factor
-tse$Geographical_location <- factor(tse$Geographical_location)
+tse0$Geographical_location <- factor(tse0$Geographical_location)
 
 # how many observations do we have per group?
-count(as.data.frame(colData(tse)), Geographical_location) %>% kable()
+count(as.data.frame(colData(tse0)), Geographical_location) %>% kable()
 ```
 
 ### Prevalence Filtering 
 
-Before we jump to our analyses, we may want to perform prevalence filtering.
-@Nearing2022 found that applying a 10% threshold
-for the prevalence of the taxa generally resulted in more robust results. 
-Some tools have builtin arguments for that. By applying the threshold to our
-input data, we can make sure it is applied for all tools. Below we show how to
-do this in `mia`:
+Before we jump to our analyses, we may want to perform some data manipulation.
+
+Let us here do aggregation to genus level, add relative abundance assay, and perform prevalence filtering.
 
 ```{r}
-tse <- subsetByPrevalentTaxa(tse, detection = 0, prevalence = 0.1)
+tse <- agglomerateByRank(tse0, rank = "genus") %>%
+       transformCounts(assay.type = "counts", method = "relabundance", MARGIN = "samples") %>%
+       subsetByPrevalentTaxa(detection = 0, prevalence = 10/100, assay.type = "relabundance")
+
+# Add also clr abundances
+tse <- transformCounts(tse, method="clr", pseudocount=1) # not bale to run
 ```
+
+Regarding prevalence filtering, @Nearing2022 found that applying a 10%
+threshold for the prevalence of the taxa generally resulted in more
+robust results. Some tools have builtin arguments for that. By
+applying the threshold to our input data, we can make sure it is
+applied for all tools. 
 
 
 
@@ -285,27 +329,28 @@ that we specify.
 
 
 ```{r ancombc2, warning = FALSE, eval=TRUE}
-# make phyloseq object
-otu <- otu_table(assay(tse), taxa_are_rows = T)
-taxa <- tax_table(as.matrix(rowData(tse)))
-meta <- sample_data(as.data.frame(colData(tse)))
-phy <- phyloseq(otu,taxa,meta)
-# perform the analysis 
-out <- ancombc(
-  phyloseq = phy,
-  formula = "Geographical_location", 
+# Run ANCOM-BC 
+out <- ancombc2(
+  data = tse,
+  assay_name = "counts", 
+  tax_level = "genus", 
+  fix_formula = "Geographical_location", 
   p_adj_method = "fdr", 
-  lib_cut = 0, 
+  lib_cut = 0,
+  prv_cut = 0,
   group = "Geographical_location", 
   struc_zero = TRUE, 
   neg_lb = TRUE,
   alpha = 0.05, 
   global = TRUE # multi group comparison will be deactivated automatically 
 )
+
 # store the FDR adjusted results [test on v2.0.3] 
-ancombc_out <- cbind.data.frame(taxid = out$res$q_val$taxon, ancombc = as.vector(out$res$q_val$Geographical_locationPune))
+ancombc_result <- cbind.data.frame(taxid = out$res$taxon,
+                                   ancombc = as.vector(out$res$q_Geographical_locationPune))
+
 # store the FDR adjusted results [test on v1.2.2] 
-# ancombc_out <- out$res$q_val %>% rownames_to_column('taxid') %>% dplyr::rename(ancombc = 2)
+# ancombc_result <- out$res$q_val %>% rownames_to_column('taxid') %>% dplyr::rename(ancombc = 2)
 ```
 
 The object `out` contains all model output. Again, see the 
@@ -316,10 +361,10 @@ whether taxa are differentially abundant can be answered by looking at the
 standard errors, p-values and q-values. Conveniently, there is a dataframe
 `diff_abn`. Here, for each taxon it is indicated whether it is differentially
 abundant between the groups (again, keep in mind that the answer is not 
-black-white). Below we show the first 6 entries of this dataframe:  
+black-white). Below we show the first 6 entries of this dataframe.
 
 ```{r, eval=TRUE}
-kable(head(ancombc_out))
+kable(head(ancombc_result))
 ```
 
 
@@ -333,14 +378,13 @@ tutorial](https://github.com/biobakery/biobakery/wiki/maaslin2).
 
 ```{r maaslin2, results = "hide", eval=TRUE}
 # maaslin expects features as columns and samples as rows 
-# for both the asv/otu table as well as meta data 
-asv <- t(assay(tse))
-meta_data <- data.frame(colData(tse))
+# for both the abundance table as well as metadata 
+
 # We can specify different GLMs/normalizations/transforms.
 # Let us use similar settings as in Nearing et al. (2021):
 maaslin2_out <- Maaslin2(
-  asv,
-  meta_data,
+  t(assay(tse)),
+  data.frame(colData(tse)),
   output = "DAA example",
   transform = "AST",
   fixed_effects = "Geographical_location",
@@ -380,10 +424,9 @@ datasets with a very high number of features.
 
 
 ```{r linda, eval=TRUE}
-otu.tab <- as.data.frame(assay(tse))
 meta <- as.data.frame(colData(tse)) %>% dplyr::select(Geographical_location)
 linda.res <- linda(
-  otu.tab, 
+  as.data.frame(assay(tse)), 
   meta, 
   formula = '~Geographical_location', 
   alpha = 0.05, 
@@ -397,19 +440,22 @@ kable(head(filter(as.data.frame(linda_out), reject)))
 
 ### ZicoSeq
 
-Subsequently, we add a linear model and permutation-based method, see details at [tutorial](https://cran.r-project.org/web/packages/GUniFrac/vignettes/ZicoSeq.html). This approach has been assessed to exhibit high power and a low false discovery rate, which has the following components: 
+Subsequently, we add a linear model and permutation-based method, see
+details at [tutorial](https://cran.r-project.org/web/packages/GUniFrac/vignettes/ZicoSeq.html).
 
-  - 1) Winsorization to decrease the influence of outliers;
-  - 2) Posterior sampling based on a beta mixture prior to address sampling variability and zero inflation;
-  - 3) Reference-based multiple-stage normalization to address compositional effects;
+This approach has been assessed to exhibit high power and a low false
+discovery rate, which has the following components:
+
+  1. Winsorization to decrease the influence of outliers;
+  1. Posterior sampling based on a beta mixture prior to address sampling variability and zero inflation;
+  1. Reference-based multiple-stage normalization to address compositional effects;
 
 
 ```{r ZicoSeq, eval=TRUE}
 set.seed(123)
-otu.tab <- as.matrix(assay(tse))
-meta <- as.data.frame(colData(tse)) 
+meta <- as.data.frame(colData(tse))
 zicoseq.obj <- GUniFrac::ZicoSeq(meta.dat = meta, 
-                                 feature.dat = otu.tab,
+                                 feature.dat = as.matrix(assay(tse)),
                                  grp.name = 'Geographical_location',
                                  adj.name = NULL, 
                                  feature.dat.type = 'count',
@@ -441,10 +487,9 @@ first create a dataframe that summarises the decision criterion for each method
 and shows a score from 0 to 3 indicating how many methods agreed on a particular
 taxon.
 
-
 ```{r comparison, eval=TRUE}
-summ <- full_join(rownames_to_column(aldex_out, "taxid") %>% dplyr::select(taxid, aldex2 = wi.eBH),
-    ancombc_out,by = "taxid") %>%
+aldex_result <- rownames_to_column(aldex_out, "taxid") %>% dplyr::select(taxid, aldex2 = wi.eBH)
+summ <- full_join(aldex_result, ancombc_result, by = "taxid") %>%
   full_join(
     dplyr::select(maaslin2_out$results, taxid = feature, maaslin2 = qval), 
     by = "taxid") %>%
@@ -457,6 +502,9 @@ summ <- full_join(rownames_to_column(aldex_out, "taxid") %>% dplyr::select(taxid
     #across(-taxid, function(x) ifelse(is.na(x), FALSE, x)),
     score = rowSums(across(c(aldex2, ancombc, maaslin2, LinDA, ZicoSeq)))
   )
+
+# Mark all NAs as FALSE
+summ[is.na(summ)] <- FALSE
 
 # This is how it looks like:
 kable(head(summ))
@@ -472,31 +520,13 @@ summarise(summ, across(where(is.logical), sum)) %>%
 filter(summ, score == 5) %>% kable()
 ```
 
-We see that each method identified at least some genera as differentially
-abundant. Many of those that were identified by ALDEx2,
+We see that each method identified at least some genera as
+differentially abundant. Many of those that were identified by ALDEx2,
 were also identified by the other methods. Let us plot the data for
-any method or for those taxa that were identified by all methods:
+any method or for those taxa that were identified by all methods.
 
 
 ```{r, daplotting, eval=TRUE, fig.width=20,fig.height=4}
-# Data
-data(peerj13075)
-tse <- peerj13075
-
-# Add relative abundances and clr abundances
-tse <- transformCounts(tse, method="relabundance")
-tse <- transformCounts(tse, method="clr", pseudocount=1) # not bale to run
-
-# Subset to prevalent taxa (exclude rare taxa at 10 percent prevalence using 0 detection threshold):
-# do the subsetting based on the relative abundance assay
-tse <- subsetByPrevalentTaxa(tse, detection = 0, prevalence = 10/100, assay.type="relabundance")
-
-# Subset to certain geolocations
-tse <- tse[ ,tse$Geographical_location %in% c("Pune", "Nashik")]
-
-# Let us make the geo location a factor
-tse$Geographical_location <- factor(tse$Geographical_location)
-
 # Create a jittered boxplot for each genus 
 assay.type <- "relabundance"
 plot_data <- data.frame(t(assay(tse, assay.type)))
@@ -522,7 +552,6 @@ robust_plots[[1]] +
   robust_plots[[3]] + 
   robust_plots[[4]] +
   robust_plots[[5]] +
-  robust_plots[[6]] +
   plot_layout(nrow = 1)
   
 # or if we have most trust in any specific method we can show genera that 
@@ -548,21 +577,24 @@ Confounders are common for microbiome studies. In general, it can be classified 
 - Technical confounder that caused by data collection, storage, DNA extraction, sequencing process, etc. 
 - Confounder caused by experimental models, such as cage effect, sample background, etc. 
 
-Adjusting confounder is necessary and important to reach a valid conclusion. To perform causal inference, it is crucial that the method is able to include covariates in the model. This is not possible with e.g. the Wilcoxon test. Other methods such as DESeq2, edgeR, ANCOMBC, LDM, Aldex2, Corncob, MaAsLin2, ZicoSeq, fastANCOM and ZINQ allow this. Below we show how to include a confounder/covariate in ANCOMBC, LinDA and ZicoSeq.
+Adjusting confounder is necessary and important to reach a valid
+conclusion. To perform causal inference, it is crucial that the method
+is able to include covariates in the model. This is not possible with
+e.g. the Wilcoxon test. Other methods such as DESeq2, edgeR, ANCOMBC,
+LDM, Aldex2, Corncob, MaAsLin2, ZicoSeq, fastANCOM and ZINQ allow
+this. Below we show how to include a confounder/covariate in ANCOMBC,
+LinDA and ZicoSeq.
 
 
 #### ANCOMBC
 
 ```{r ancombc_adj, eval=TRUE}
-# make phyloseq object
-otu <- otu_table(assay(tse), taxa_are_rows = T)
-taxa <- tax_table(as.matrix(rowData(tse)))
-meta <- sample_data(as.data.frame(colData(tse)))
-phy <- phyloseq(otu,taxa,meta)
 # perform the analysis 
-ancombc_cov <- ancombc(
-  phyloseq = phy,
-  formula = "Geographical_location + Age", 
+ancombc_cov <- ancombc2(
+  data = tse,
+  assay_name = "counts",
+  tax_level = "genus",
+  fix_formula = "Geographical_location + Age", 
   p_adj_method = "fdr", 
   lib_cut = 0, 
   group = "Geographical_location", 
@@ -601,10 +633,8 @@ kable(head(filter(linda.res, reject==T)))
 
 ```{r ZicoSeq_adj, eval=TRUE}
 set.seed(123)
-otu.tab <- as.matrix(assay(tse))
-meta <- as.data.frame(colData(tse)) 
-zicoseq.obj <- GUniFrac::ZicoSeq(meta.dat = meta, 
-                                 feature.dat = otu.tab,
+zicoseq.obj <- GUniFrac::ZicoSeq(meta.dat = as.data.frame(colData(tse)) , 
+                                 feature.dat = as.matrix(assay(tse)),
                                  grp.name = 'Geographical_location',
                                  adj.name = 'Gender', 
                                  feature.dat.type = 'count',
@@ -626,7 +656,8 @@ group-wise associations.
 
 ### Group-wise associations testing based on balances
 
-For testing associations based on balances, check the philr R/Bioconductor package.
+For testing associations based on balances, check the philr
+R/Bioconductor package.
 
 
 ## Session Info {-}
